# mawk-20140914

./: CHANGES  Makefile.in  README  aclocal.m4  array.c  array.h  array.w  bi_funct.c  bi_funct.h  bi_vars.c  bi_vars.h  cast.c  code.c  code.h  config_h.in  configure  configure.in  da.c  error.c  execute.c  fcall.c  field.c  field.h  files.c  files.h  fin.c  fin.h  fpe_check.c  hash.c  init.c  init.h  jmp.c  jmp.h  kw.c  main.c  makedeps.sh  makescan.c  matherr.c  mawk.h  memory.c  (+38 more)
config-user/: apollo  convex  cray  mips  sgi  ultrix-mips
debian/: changelog  control  copyright  rules
debian/patches/: 00list  01_error-on-full-fs.dpatch  02_fix-examples.dpatch  03_read-and-close-redefinition.dpatch  04_mawk.1-fix-pi.dpatch  05_-Wall-fixes.dpatch  06_parse.y-semicolons.dpatch  07_mawktest-check-devfull.dpatch  08_fix-for-gcc3.3.dpatch
examples/: hical
man/: Makefile  TODO  mawk.1  mawk.doc
msdos/: argvmks.c  argvpoly.c  dosexec.c  makefile.msc  makefile.tcc  makefile.ztc  msc.h  tcc.h  vs2008.h  vs2008.mak  vs6.h  vs6.mak  ztc.h
package/: mawk.spec
package/debian/: changelog  control  copyright  docs  postinst  postrm  preinst  prerm  rules  watch
rexp/: Makefile  regexp_system.c  rexp.c  rexp.h  rexp0.c  rexp1.c  rexp2.c  rexp3.c  rexp4.c  rexpdb.c
test/: fpe_test  fpe_test.bat  fpetest1.awk  fpetest2.awk  fpetest3.awk  mawktest  mawktest.bat  nextfile.awk  nextfile.out  noloop.awk  null-rs.awk  nulls.out  nulls0.awk  reg-awk.out  reg0.awk  reg1.awk  reg2.awk  reg3.awk  reg4.awk  reg5.awk  reg6.awk  reg7.awk  wc.awk  wfrq0.awk
v7/: V7.h
