dnl configure.in for mawk
dnl
dnl @Log: configure.in,v @
dnl Revision 1.13  1995/10/16  12:25:00  mike
dnl configure cleanup
dnl
dnl Revision 1.12  1995/04/20  20:26:51  mike
dnl beta improvements from Carl Mascott
dnl
dnl Revision 1.11  1995/01/09  01:22:30  mike
dnl check sig handler ret type to make fpe_check.c more robust
dnl
dnl Revision 1.10  1994/12/18  20:46:24  mike
dnl fpe_check -> ./fpe_check
dnl
dnl Revision 1.9  1994/12/14  14:42:55  mike
dnl more explicit that "   " MATHLIB means none
dnl
dnl Revision 1.8  1994/12/11  21:26:25  mike
dnl tweak egrep for [fs]printf prototypes
dnl
dnl Revision 1.7  1994/10/16  18:38:23  mike
dnl use sed on defines.out
dnl
dnl Revision 1.6  1994/10/11  02:49:06  mike
dnl systemVr4 siginfo
dnl
dnl Revision 1.5  1994/10/11  00:39:25  mike
dnl fpe check stuff
dnl
dnl
dnl
AC_INIT(mawk.h)

CF_MAWK_GET_CONFIG_USER
CF_MAWK_PROG_GCC
AC_PROG_CPP
CF_MAWK_SET_IF_UNSET(CFLAGS,-O)
CF_MAWK_MATHLIB
 
AC_ARG_WITH(local-regexp,
[  --with-local-regexp             use the mawk's regexp engine],
[
if test "x${withval}" = xyes; then
    CFLAGS="$CFLAGS -DLOCAL_REGEXP"
fi
])

CF_MAWK_PROG_YACC
CF_MAWK_CC_FEATURES
CF_MAWK_FIND_SIZE_T
CF_MAWK_CHECK_HEADERS(fcntl.h errno.h math.h time.h stdarg.h stdlib.h string.h)
CF_MAWK_CHECK_FUNCS(memcpy strchr strerror vfprintf strtod fmod matherr)
CF_MAWK_CHECK_FPRINTF
CF_MAWK_FIND_MAX_INT
CF_MAWK_RUN_FPE_TESTS
CF_MAWK_OUTPUT_CONFIG_H
AC_OUTPUT(Makefile)
